[BUGFIX] news-single page navigation 'next record link' aligned to left when no 'previous record link'.

--- a/felayout_t3kit/dev/styles/main/plugins/news/news.less
+++ b/felayout_t3kit/dev/styles/main/plugins/news/news.less
@@ -190,7 +190,6 @@
         &__prev,
         &__next {
             width: 50%;
-            float: left;
             position: relative;
 
             &:before,
@@ -201,6 +200,7 @@
         }
 
         &__next {
+            float: right;
             text-align: right;
             padding: 0 25px 0 15px;
 
@@ -212,6 +212,7 @@
         }
 
         &__prev {
+            float: left;
             padding: 0 15px 0 25px;
 
             .link-arrow--circle();
